Create project cards to contain todo items

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
+    <title>My Todos</title>
 </head>
 <body>
-    
+    <header><h1>My Todos</h1></header>
+    <div class="todo-app-container">
+    </div>
+    <footer>&COPY; 2025 Justin Kim</footer>
 </body>
 </html>
