Refactor code and add project form to add projects

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,39 @@
     <title>My Todos</title>
 </head>
 <body>
-    <header><h1>My Todos</h1></header>
+    <header>
+        <h1>My Todos</h1>
+        <button id="add-project-btn" type="button">+ Project</button>
+    </header>
+    <div class="add-todo-item-modal">
+        <form class="add-todo-item-form">
+            <button id="add-todo-item-form-close-btn">X</button>
+            <div class="todo-item-input">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+            </div>
+            <div class="todo-item-input">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" cols="10" rows="4" style="resize: none; overflow: auto;"></textarea>
+            </div>
+            <div class="todo-item-input">
+                <label for="due-date">Deadline</label>X
+                <input type="date" name="due-date" id="due-date">
+            </div>
+            <input type="hidden" name="projectId" id="projectId">
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+    <div class="add-project-modal">
+        <form class="add-project-form">
+            <button id="add-project-form-close-btn">X</button>
+            <div class="project-input">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
     <div class="todo-app-container">
     </div>
     <footer>&COPY; 2025 Justin Kim</footer>
